--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
 
+
+       // compile 'com.android.support:recyclerview-v7:21.0.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
